// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Volume Controls Renders correctly 1`] = `
<div
  class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 MuiGrid-align-items-xs-center MuiGrid-justify-xs-center"
>
  <div
    class="MuiGrid-root MuiGrid-item"
  >
    <button
      class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorSecondary"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiIconButton-label"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root makeStyles-icon-1"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M18.5 12c0-1.77-1.02-3.29-2.5-4.03v8.05c1.48-.73 2.5-2.25 2.5-4.02zM5 9v6h4l5 5V4L9 9H5z"
          />
        </svg>
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
  </div>
  <div
    class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true"
  >
    <span
      class="MuiSlider-root MuiSlider-colorSecondary"
    >
      <span
        class="MuiSlider-rail"
      />
      <span
        class="MuiSlider-track"
        style="left: 0%; width: 10%;"
      />
      <input
        type="hidden"
        value="0.1"
      />
      <span
        aria-labelledby="continuous-slider"
        aria-orientation="horizontal"
        aria-valuemax="1"
        aria-valuemin="0"
        aria-valuenow="0.1"
        class="MuiSlider-thumb MuiSlider-thumbColorSecondary"
        data-index="0"
        role="slider"
        style="left: 10%;"
        tabindex="0"
      />
    </span>
  </div>
</div>
`;

exports[`Volume Controls Renders correctly while muted 1`] = `
<div
  class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 MuiGrid-align-items-xs-center MuiGrid-justify-xs-center"
>
  <div
    class="MuiGrid-root MuiGrid-item"
  >
    <button
      class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorSecondary"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiIconButton-label"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root makeStyles-icon-7"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M16.5 12c0-1.77-1.02-3.29-2.5-4.03v2.21l2.45 2.45c.03-.2.05-.41.05-.63zm2.5 0c0 .94-.2 1.82-.54 2.64l1.51 1.51C20.63 14.91 21 13.5 21 12c0-4.28-2.99-7.86-7-8.77v2.06c2.89.86 5 3.54 5 6.71zM4.27 3L3 4.27 7.73 9H3v6h4l5 5v-6.73l4.25 4.25c-.67.52-1.42.93-2.25 1.18v2.06c1.38-.31 2.63-.95 3.69-1.81L19.73 21 21 19.73l-9-9L4.27 3zM12 4L9.91 6.09 12 8.18V4z"
          />
        </svg>
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
  </div>
  <div
    class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true"
  >
    <span
      class="MuiSlider-root MuiSlider-colorSecondary Mui-disabled"
    >
      <span
        class="MuiSlider-rail"
      />
      <span
        class="MuiSlider-track"
        style="left: 0%; width: 10%;"
      />
      <input
        type="hidden"
        value="0.1"
      />
      <span
        aria-labelledby="continuous-slider"
        aria-orientation="horizontal"
        aria-valuemax="1"
        aria-valuemin="0"
        aria-valuenow="0.1"
        class="MuiSlider-thumb MuiSlider-thumbColorSecondary Mui-disabled"
        data-index="0"
        role="slider"
        style="left: 10%;"
      />
    </span>
  </div>
</div>
`;

exports[`Volume Controls Renders correctly with 0 - 49% volume 1`] = `
<div
  class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 MuiGrid-align-items-xs-center MuiGrid-justify-xs-center"
>
  <div
    class="MuiGrid-root MuiGrid-item"
  >
    <button
      class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorSecondary"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiIconButton-label"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root makeStyles-icon-19"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M18.5 12c0-1.77-1.02-3.29-2.5-4.03v8.05c1.48-.73 2.5-2.25 2.5-4.02zM5 9v6h4l5 5V4L9 9H5z"
          />
        </svg>
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
  </div>
  <div
    class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true"
  >
    <span
      class="MuiSlider-root MuiSlider-colorSecondary"
    >
      <span
        class="MuiSlider-rail"
      />
      <span
        class="MuiSlider-track"
        style="left: 0%; width: 30%;"
      />
      <input
        type="hidden"
        value="0.3"
      />
      <span
        aria-labelledby="continuous-slider"
        aria-orientation="horizontal"
        aria-valuemax="1"
        aria-valuemin="0"
        aria-valuenow="0.3"
        class="MuiSlider-thumb MuiSlider-thumbColorSecondary"
        data-index="0"
        role="slider"
        style="left: 30%;"
        tabindex="0"
      />
    </span>
  </div>
</div>
`;

exports[`Volume Controls Renders correctly with 0% volume 1`] = `
<div
  class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 MuiGrid-align-items-xs-center MuiGrid-justify-xs-center"
>
  <div
    class="MuiGrid-root MuiGrid-item"
  >
    <button
      class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorSecondary"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiIconButton-label"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root makeStyles-icon-13"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M7 9v6h4l5 5V4l-5 5H7z"
          />
        </svg>
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
  </div>
  <div
    class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true"
  >
    <span
      class="MuiSlider-root MuiSlider-colorSecondary"
    >
      <span
        class="MuiSlider-rail"
      />
      <span
        class="MuiSlider-track"
        style="left: 0%; width: 0%;"
      />
      <input
        type="hidden"
        value="0"
      />
      <span
        aria-labelledby="continuous-slider"
        aria-orientation="horizontal"
        aria-valuemax="1"
        aria-valuemin="0"
        aria-valuenow="0"
        class="MuiSlider-thumb MuiSlider-thumbColorSecondary"
        data-index="0"
        role="slider"
        style="left: 0%;"
        tabindex="0"
      />
    </span>
  </div>
</div>
`;

exports[`Volume Controls Renders correctly with 50 - 100% volume 1`] = `
<div
  class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 MuiGrid-align-items-xs-center MuiGrid-justify-xs-center"
>
  <div
    class="MuiGrid-root MuiGrid-item"
  >
    <button
      class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorSecondary"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiIconButton-label"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root makeStyles-icon-25"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M3 9v6h4l5 5V4L7 9H3zm13.5 3c0-1.77-1.02-3.29-2.5-4.03v8.05c1.48-.73 2.5-2.25 2.5-4.02zM14 3.23v2.06c2.89.86 5 3.54 5 6.71s-2.11 5.85-5 6.71v2.06c4.01-.91 7-4.49 7-8.77s-2.99-7.86-7-8.77z"
          />
        </svg>
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
  </div>
  <div
    class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true"
  >
    <span
      class="MuiSlider-root MuiSlider-colorSecondary"
    >
      <span
        class="MuiSlider-rail"
      />
      <span
        class="MuiSlider-track"
        style="left: 0%; width: 70%;"
      />
      <input
        type="hidden"
        value="0.7"
      />
      <span
        aria-labelledby="continuous-slider"
        aria-orientation="horizontal"
        aria-valuemax="1"
        aria-valuemin="0"
        aria-valuenow="0.7"
        class="MuiSlider-thumb MuiSlider-thumbColorSecondary"
        data-index="0"
        role="slider"
        style="left: 70%;"
        tabindex="0"
      />
    </span>
  </div>
</div>
`;
